k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: store-catalog-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: store-catalog
  template:
    metadata:
      labels:
        app: store-catalog
    spec:
      containers:
        - image: anzeo/store-catalog:latest
          name: store-catalog
          ports:
            - containerPort: 8080
              name: server
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health/live
              port: server
            initialDelaySeconds: 20
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /health/ready
              port: server
            initialDelaySeconds: 20
            periodSeconds: 3

---

apiVersion: v1
kind: Service
metadata:
  name: store-catalog
spec:
  type: ClusterIP
  ports:
    - port: 8080
      protocol: TCP
      targetPort: server
  selector:
    app: store-catalog
